allow longer data

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ doctype html
 html(lang="en")
   head
     title dirtylogger
-    link(href='public/style.css', rel='stylesheet', type='text/css')
+    link(href='/public/style.css', rel='stylesheet', type='text/css')
   body
     h1.
       Dirtylog
