--- a/views/user.jade
+++ b/views/user.jade
@@ -2,7 +2,7 @@ doctype html
 html(lang="en")
   head
     title dirtylogger
-    link(href='public/style.css', rel='stylesheet', type='text/css')
+    link(href='/public/style.css', rel='stylesheet', type='text/css')
   body
     h1.
       User: #{user.name}
@@ -17,4 +17,4 @@ html(lang="en")
         li= val
 
     script(src='/socket.io/socket.io.js')
-    script(src='public/dirtylog.js')
+    script(src='/public/dirtylog.js')
