--- a/views/index.jade
+++ b/views/index.jade
@@ -1,11 +1,12 @@
 doctype html
 html(lang="en")
   head
-    title dirtylogger
+    title dirtylog
     link(href='/public/style.css', rel='stylesheet', type='text/css')
+    link(rel="icon", type="image/png", href="/public/favi.png")
   body
-    h1.
-      Dirtylog
+    h1
+      img(src="/public/logo.jpg", width="250", height="60")
 
     p.
       #{protocol}://#{host}/{key}
