--- a/views/user.jade
+++ b/views/user.jade
@@ -1,8 +1,9 @@
 doctype html
 html(lang="en")
   head
-    title dirtylogger
+    title dirtylog
     link(href='/public/style.css', rel='stylesheet', type='text/css')
+    link(rel="icon", type="image/png", href="/public/favi.png")
   body
     h1.
       User: #{user.name}
