--- a/views/index.jade
+++ b/views/index.jade
@@ -5,10 +5,26 @@ html(lang="en")
     link(href='/public/style.css', rel='stylesheet', type='text/css')
     link(rel="icon", type="image/png", href="/public/favi.png")
   body
-    h1
+
+    a(href="https://github.com/benbrunton/dirtylog")
+      img(style="position: absolute; top: 0; right: 0; border: 0;", src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png")
+        
+    header
       img(src="/public/logo.jpg", width="250", height="60")
 
-    p.
-      #{protocol}://#{host}/{key}
-    p.
-      #{protocol}://#{host}/log/{key}/{value}
+    div(class='container')
+      p.
+        Dirtylog is a quick and dirty debugging tool for environments where there is no obvious stdout or console
+
+      div(class="section")
+        ol
+          li
+            p.
+              View your logs here:
+            pre.
+              #{protocol}://#{host}/{key}
+          li
+            p.
+              Send your messages here:
+            pre.
+              #{protocol}://#{host}/log/{key}/{value}
