--- a/views/user.jade
+++ b/views/user.jade
@@ -5,6 +5,9 @@ html(lang="en")
     link(href='/public/style.css', rel='stylesheet', type='text/css')
     link(rel="icon", type="image/png", href="/public/favi.png")
   body
+    a(href="https://github.com/benbrunton/dirtylog")
+      img(style="position: absolute; top: 0; right: 0; border: 0;", src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png")
+        
     h1.
       User: #{user.name}
 
@@ -16,7 +19,7 @@ html(lang="en")
     button(id='clear').
       clear
 
-    ul
+    ul(class='log')
       each val in user.list
         li= val
 
