--- a/views/index.jade
+++ b/views/index.jade
@@ -19,12 +19,8 @@ html(lang="en")
       div(class="section")
         ol
           li
-            p.
-              View your logs here:
-            pre.
-              #{protocol}://#{host}/{key}
+            p View your logs here:
+            pre #{protocol}://#{host}/{key}
           li
-            p.
-              Send your messages here:
-            pre.
-              #{protocol}://#{host}/log/{key}/{value}
+            p Send your messages here:
+            pre #{protocol}://#{host}/log/{key}/{value}
