--- a/views/user.jade
+++ b/views/user.jade
@@ -1,27 +1,35 @@
 doctype html
 html(lang="en")
   head
-    title dirtylog
+    title dirtylog/#{user.name}
     link(href='/public/style.css', rel='stylesheet', type='text/css')
     link(rel="icon", type="image/png", href="/public/favi.png")
   body
     a(href="https://github.com/benbrunton/dirtylog")
       img(style="position: absolute; top: 0; right: 0; border: 0;", src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png")
-        
-    h1.
-      User: #{user.name}
+      
 
     input(id='user', class='hidden', value='#{user.name}')
 
-    pre.
-      new Image().src = "#{protocol}://#{host}/log/#{user.name}/{value}";
+    header
+      span(class="title")
+        span dirtylog/
+        span(class="key") #{user.name}
 
-    button(id='clear').
-      clear
+      p Log messages by calling <a target="_blank" href="#{protocol}://#{host}/log/#{user.name}/{message}"><code>#{protocol}://#{host}/log/#{user.name}/{message}</code></a>
+  
+      label example:
+      pre(class="labelledCode").
+        function dirtylog(message){
+          new Image().src = "#{protocol}://#{host}/log/#{user.name}/" + message;
+        }
 
-    ul(class='log')
-      each val in user.list
-        li= val
+    div
+      button(id='clear') clear
+
+      ul(class='log')
+        each val in user.list
+          li= val
 
     script(src='/socket.io/socket.io.js')
     script(src='/public/dirtylog.js')
