lowercased front page

--- a/views/index.jade
+++ b/views/index.jade
@@ -14,13 +14,13 @@ html(lang="en")
 
     div(class='container')
       p.
-        Dirtylog is a quick and dirty debugging tool for environments where there is no obvious stdout or console
+        dirtylog is a quick and dirty debugging tool for environments where there is no obvious stdout or console
 
       div(class="section")
         ol
           li
-            p View your logs here:
+            p view your logs here:
             pre #{protocol}://#{host}/{key}
           li
-            p Send your messages here:
+            p send your messages here:
             pre #{protocol}://#{host}/log/{key}/{value}
